reluctantly add a container for photos in a figure

--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
 </head>
 
 <body>
-  <div class="slider">
-    <figure class="comparison">
+  <figure>
+    <div class="comparison-photos">
       <img class="before" src="./images/color.jpg" alt="before photo" />
       <img class="after" src="./images/bw.jpg" alt="after photo" />
-      <figcaption class="caption">
-        Phil through a sewing frame: color and black and white.
-      </figcaption>
-      <input type="range" min="0" max="100" value="50" id="slider" />
-    </figure>
-  </div>
+    </div>
+    <figcaption class="caption">
+      Phil through a sewing frame: color and black and white.
+    </figcaption>
+  </figure>
   <script src="./script/script.js" type="text/javascript"></script>
 </body>
 
