add actual before/after images

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
   <figure>
     <div class="comparison-photos">
-      <img class="before" src="./images/color.jpg" alt="before photo" />
-      <img class="after" src="./images/bw.jpg" alt="after photo" />
+      <img class="before" src="./images/before-f-e-dictionary.jpg" alt="before photo" />
+      <img class="after" src="./images/after-f-e-dictionary.jpg" alt="after photo" />
     </div>
     <figcaption class="caption">
-      Phil through a sewing frame: color and black and white.
+      French-English Dictionary conservation treatment.
     </figcaption>
   </figure>
   <script src="./script/script.js" type="text/javascript"></script>
